--- a/templatemo_style.css
+++ b/templatemo_style.css
@@ -19,7 +19,7 @@ a.more span { font-size: 14px; letter-spacing: -3px; }
 a.more:hover { color: #660; text-decoration: none }
 
 
-p { margin: 0 0 10px 0; padding: 0; }
+p { margin: 0 0 10px 0; padding: 0; font-size: 16px; }
 img { border: none; }
 blockquote { font-style: italic; margin: 0 0 0 10px;}
 cite { font-weight: bold; color: #c63a03; }
